assets/css/styles.css
/* ... */
.activity-content {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    height: 30rem;
}
#activity-left, #activity-right {
    display: flex;
    flex: 1;
    gap: 2rem;
    height: 100%;
}
#activity-left .activity-left-card, #activity-right .activity-left-card {
    display: flex;
    flex-direction: column;
    flex: 1;
    height: 100%;
    padding: 0;
    border-radius: 1rem;
    background-color: white;
    box-shadow: 0 5px 25px 0px rgb(0 0 0 / 20%);
    transition: transform .2s ease;
}
#activity-left .activity-left-card:hover, #activity-right .activity-left-card:hover {
    transform: translateY(5px);
}
#activity-left .activity-left-card img, #activity-right .activity-left-card img {
    border-radius: 1rem 1rem 0 0;
}
.activity-double-cards {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 2rem;
}
.activity-double-cards .card {
    padding: 0;
}
#activity-left .activity-double-cards .card:first-child {
    flex: 65%;
}
#activity-left .activity-double-cards .card:last-child {
    flex: 35%;
}

#activity-right .activity-double-cards .card:first-child {
    flex: 50%;
}
#activity-right .activity-double-cards .card:last-child {
    flex: 50%;
}
#activity-left .activity-left-card img, #activity-right .activity-left-card img, .activity-double-cards .card img {
    flex-grow: 1;
    height: 1px;
    width: 100%;
    object-fit: cover;
}
#activity-left .activity-left-card .card-body, #activity-right .activity-left-card .card-body, .activity-double-cards .card .card-body {
    padding: 1rem;
    flex-grow: unset;
}

#footer-container {
    display: flex;
    background-color: var(--grey);
    padding: 2rem 4rem 3rem;
}
#footer-container .footer-block {
    flex: 33.33%;
}
#footer-container .footer-block h3 {
    font-family: "Raleway-Bold";
    margin-top: 0;
}
#footer-container .footer-block .footer-block-content {
    display: flex;
    flex-direction: column;
}
#footer-container .footer-block .footer-block-content a {
    color: black;
    text-decoration: none;
    margin-bottom: 0.5rem;
}

.hidden-link {
    color: unset;
    text-decoration: none;
}

@media screen and (max-width: 991px) {
    .hosting-content {
        height: fit-content;
    }
    .hosting-container .cards-container .card {
        flex: 1 1 45%;
    }
    .hosting-container .cards-container .card img {
        height: 10rem;
    }
    .activity-content {
        height: fit-content;
    }
    #activity-left, #activity-right {
        flex-wrap: wrap;
    }
    #activity-left, #activity-right {
        flex-direction: column;
    }
    #activity-left .activity-left-card, #activity-left .activity-double-cards .card,
    #activity-right .activity-left-card, #activity-right .activity-double-cards .card {
        flex: 12rem !important;
    }
}
@media screen and (max-width: 767px){
    body main {
        padding: 0;
    }
    #nav {
        flex-direction: column;
        align-items: center;
        padding: 0;
        margin-bottom: 2rem;
    }
    #nav ul{
        width: 100%;
        text-align: center;
    }
    #nav ul>li{
        padding: 1rem 2.5rem;
        flex: 1;
        box-shadow: inset 0 -20px 0px -17px var(--grey);
    }
    #nav ul>li:hover{
        box-shadow: inset 0 -20px 0px -17px var(--blue);
    }
    #search-filter-container {
        padding: 0 2rem;
    }
    .search-title-container h1 {
        font-size: 1.5rem;
    }

    .search-container .search {
        padding: 1rem 1.25rem;
        border-radius: 1rem;
    }
    .search-container .search i {
        display: block;
    }
    .search-container .search span {
        display: none;
    }
    .filter-container .filter-title {
        width: 100%;
    }
    .hosting-container .hosting-content {
        border-radius: unset;
        padding: 0.5rem 1.5rem 0.5rem 1.5rem;
    }
    .hosting-container {
        flex-wrap: wrap-reverse;
    }

    .hosting-container .cards-container {
        flex-direction: column;
    }

    .hosting-container .cards-container .card {
        height: 12rem;
        flex: none;
    }
    .hosting-container .cards-container .card img {
        height: 1px;
        flex-grow: 1;
    }
    .hosting-container .cards-container .card .card-body {
        flex-grow: unset;
    }
    .hosting-container .popular-hosting {
        border-radius: unset;
        padding: 2rem 1.5rem;
    }
    .hosting-container .hosting-content {
        background-color: unset;
    }
    .hosting-container .cards-container, #activity .activity-content, 
    #activity .activity-content #activity-left, #activity .activity-content #activity-left .activity-double-cards, 
    #activity .activity-content #activity-right, #activity .activity-content #activity-right .activity-double-cards {
        gap: 1rem;
    }
    .hosting-container .popular-hosting .cards-hosting-container {
        gap: .75rem;
    }
    #activity {
        padding: 2rem 1.5rem;
        margin-bottom: 1.5rem;
    }
    #footer-container {
        padding: 2rem 1.5rem 2rem;
    }
}
@media screen and (max-width: 576px) {
    .activity-content {
        flex-direction: column;
    }
    #footer-container {
        flex-direction: column;
        gap: 2rem;
    }
}
@media screen and (min-width: 768px) {
    .hosting-container {
        flex-wrap: wrap;
    }
    .card-hosting img {
        width: 20%;
    }
}
@media screen and (min-width: 992px) {
    body main, #nav {
        padding: 0 2rem;
    }
    .hosting-container {
        flex-wrap: nowrap;
    }
    .card-hosting img {

        width: 45%;
    }
    #activity-left, #activity-right {
        flex-direction: row;
    }
    #footer-container {
        padding: 2rem 2rem 3rem;
    }
}
@media screen and (min-width: 1200px) {
    body main {
        padding: 0 2rem;
    }
    .cards-container a .card {
        flex: 0 0 29%;
    }
}
/* ... */

